--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
 # Enable Rewrite Engine
     RewriteEngine On
-    RewriteBase /
+    RewriteBase /Confdroid_Api/
 # Map urls to api.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
