Adds the ability to remove and add users.
Brings to api to a more standard state. work on this will continue.

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
 # Enable Rewrite Engine
     RewriteEngine On
-    RewriteBase /Confdroid_Api/
+    RewriteBase /
 # Map urls to api.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
